@@ -1,23 +1,8 @@
-import collections
-import sys
-
-if sys.version_info[0] >= 3:
-    from urllib.parse import urlparse
-    from collections import UserDict
-    from inspect import getfullargspec as getargspec
-else:
-    from urlparse import urlparse
-    from UserDict import UserDict
-    from inspect import getargspec
-
-if sys.version_info >= (3, 3):
-    from collections.abc import Mapping, MutableMapping
-else:
-    from collections import Mapping, MutableMapping
+from collections import UserDict
+from collections.abc import Mapping
 
 # Users can pass in objects that subclass a few different objects
 # More specifically, rasterio has a CRS() class that subclasses UserDict()
-# In Python 2 UserDict() is in its own module and does not subclass Mapping()
 DICT_TYPES = (dict, Mapping, UserDict)
 
 
